2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-releas.sh: Tag Linux repository.
	* push-release.sh: Push Linux repository.

2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Configure linux out of source tree.

2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-cleanup.sh: Refresh.

2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-openocd.exp: New board.

2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Remove --force option.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Add default_toolchain_config variable.
	* build-all.sh: Do not set TOOLCHAIN_CONFIG by default.
	* tag-release.sh: Create toolchain config for created release.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-release.sh: Do not push tags.
	* push-release.sh: New file.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Do not list git branches in it.
	* build-all.sh: Add --checkout-config option
	* config/arc-2014.08.sh: 2014.08 release tags.
	* config/arc-2014.12.sh: 2014.12 release tags.
	* config/arc-dev.sh: Git development branches.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Do not build unified source tree.
	* build-uclibc: Remove mentions of unified source tree.
	* symlink-all.sh: Remove.
	* README.md: No unified source tree anymore.
	* Makefile.release: No need to build unisrc.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions for uClibc tools.
	* build-uclibc.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions.
	* build-elf32.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* doc/build.md: New file.
